--- a/main.html
+++ b/main.html
@@ -7,6 +7,10 @@
 </head>
 
 <body>
+	<div>
+		<p id="status">Enter the Metaverse</p>
+		<button id="enterBtn" onclick="changeMatter()">Enter</button>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
