--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<div>
-		<p id="status">Enter the Metaverse</p>
+		<p ><h1 id="status">Enter the Metaverse</h1></p>
 		<button id="enterBtn" onclick="changeMatter()">Enter</button>
 	</div>
 	<!-- the entire body must be written by student -->
